export interface Cliente {
    id: number;
    nombre: string;
    cuit: string;
    mail: string;
}